Bug 1952342 - Right align items in interest picker r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D240674

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/InterestPicker/_InterestPicker.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/InterestPicker/_InterestPicker.scss
@@ -26,7 +26,7 @@
     row-gap: calc(1.25 * var(--space-small));
     column-gap: var(--space-small);
     justify-content: flex-start;
-    margin: var(--space-small) auto;
+    margin: var(--space-small) 0;
     padding-inline-start: 0;
     width: fit-content;
 
